--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -2,20 +2,13 @@ name: unit_tests
 
 on:
   push:
-    # branches:
-    #   - main
+    branches:
+      - main
   pull_request:
 
 concurrency:
   group: unit_tests-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
-
-env:
-  PYTHON_VERSION: 3.8.5
-  PIP_VERSION: 20.2.4
-  REQUIREMENTS_PATH: "internal/buildscripts/packaging/tests/requirements.txt"
-  RESULT_PATH: "~/testresults"
-  GO_VERSION: 1.17.2
 
 jobs:
   unit_tests:
