--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
 
-      - name: Pull in kong-plugin-signalfx
-        run: git submodule update --init --recursive --remote
+      # - name: Pull in kong-plugin-signalfx
+      #   run: git submodule update --init --recursive --remote
 
       - name: Install dependencies
         run: |
