--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
+          curl https://pyenv.run | bash
           pyenv local 3.5.2
           pip3 install tox
       
