--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -32,6 +32,10 @@ jobs:
         run: |
           sudo apt update && sudo apt install -yq python3-pip
           curl https://pyenv.run | bash
+          export PATH="~/.pyenv/bin:$PATH"
+          eval "$(pyenv init -)"
+          eval "$(pyenv virtualenv-init -)"
+
           pyenv local 3.5.2
           pip3 install tox
       
