--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
+          # curl https://pyenv.run | bash
+          # export PATH="~/.pyenv/bin:$PATH"
+          # eval "$(pyenv init -)"
+          # eval "$(pyenv virtualenv-init -)"
 
-          pyenv local 3.5.2
+          # pyenv local 3.5.2
           pip3 install tox
       
       - name: Run integration tests
