--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -6,9 +6,9 @@ on:
     #   - main
   pull_request:
 
-concurrency:
-  group: integration_tests-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: integration_tests-${{ github.event.pull_request.number || github.ref }}
+#   cancel-in-progress: true
 
 env:
   PYTHON_VERSION: 3.8.5
@@ -25,14 +25,14 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
 
-      # - name: Pull in kong-plugin-signalfx
-      #   run: git submodule update --init --recursive --remote
+      - name: Pull in kong-plugin-signalfx
+        run: git submodule update --init --recursive --remote
 
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install bzip2 libreadline6 libreadline6-dev openssl
-
+          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+          
           curl https://pyenv.run | bash
           export PATH="~/.pyenv/bin:$PATH"
           eval "$(pyenv init -)"
