--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,10 +31,15 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
           
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
+          test -d ~/.linuxbrew && eval $(~/.linuxbrew/bin/brew shellenv)
+          test -d /home/linuxbrew/.linuxbrew && eval$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
+          test -r ~/.bash_profile &&echo "eval \$($(brew --prefix)/bin/brew shellenv)" >> ~/.bash_profile
+          echo "eval \$($(brew --prefix)/bin/brew shellenv)" >> ~/.profile
+
+          brew update
+          brew install pyenv           
+          
           eval "$(pyenv init -)"
           eval "$(pyenv virtualenv-init -)"
 
