--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install bzip2 libreadline6-dev openssl
+          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
           curl https://pyenv.run | bash
           export PATH="~/.pyenv/bin:$PATH"
+          export PATH="$PYENV_ROOT/bin:$PATH" 
           eval "$(pyenv init -)"
           eval "$(pyenv virtualenv-init -)"
+          exec $SHELL
 
           pyenv install 3.5.2
           pyenv local 3.5.2
