--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   PYTHON_VERSION: 3.8.5
-  PIP_VERSION: 21.3.1
+  PIP_VERSION: 20.2.4
   REQUIREMENTS_PATH: "internal/buildscripts/packaging/tests/requirements.txt"
   RESULT_PATH: "~/testresults"
   GO_VERSION: 1.17.2
@@ -20,7 +20,7 @@ env:
 jobs:
   integration_tests:
     name: integration_tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
@@ -31,20 +31,19 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get -y install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+          sudo apt install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
 
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          export PATH="$PYENV_ROOT/bin:$PATH" 
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
+          git clone https://github.com/pyenv/pyenv.git ~/.pyenv
 
+          sudo echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+          sudo echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+          sudo echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n eval "$(pyenv init -)"\nfi' >> ~/.bashrc
+
+          exec "$SHELL"
+          
           pyenv install 3.5.2
           pyenv local 3.5.2
           pip3 install tox
-
-          pyenv --version
-          which python
       
       - name: Run integration tests
         run: tox -e integration
