--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -38,6 +38,9 @@ jobs:
           sudo echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
           sudo echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           sudo echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n eval "$(pyenv init -)"\nfi' >> ~/.bashrc
+
+          sudo ls -la
+          sudo cat ~/.bashrc
           
           source ~/.bashrc
 
