--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -30,18 +30,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -yq python3-pip
-          sudo apt install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
-
+          sudo apt update
+          sudo apt install -y make build-essential python3 python-pip libpq-dev python3-dev libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl
+          
           git clone https://github.com/pyenv/pyenv.git ~/.pyenv
 
-          sudo echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
-          sudo echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
-          sudo echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n eval "$(pyenv init -)"\nfi' >> ~/.bashrc
+          export PYENV_ROOT="$HOME/.pyenv"
+          export PATH="$PYENV_ROOT/bin:$PATH"
 
+          eval "$(pyenv init -)"
+
+          sudo -H pip install -U pipenv
+          pip install --user pipenv
+          
           pyenv install 3.5.2
           pyenv local 3.5.2
-          pip3 install tox
+          pip install tox
       
       - name: Run integration tests
         run: tox -e integration
