--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -30,22 +30,17 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y make build-essential python3 python-pip libpq-dev python3-dev libssl1.0-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl
-          
-          git clone https://github.com/pyenv/pyenv.git ~/.pyenv
+          sudo apt update && sudo apt install -yq python3-pip
+          sudo apt-get install bzip2 libreadline6 libreadline6-dev openssl
 
-          export PYENV_ROOT="$HOME/.pyenv"
-          export PATH="$PYENV_ROOT/bin:$PATH"
-
+          curl https://pyenv.run | bash
+          export PATH="~/.pyenv/bin:$PATH"
           eval "$(pyenv init -)"
+          eval "$(pyenv virtualenv-init -)"
 
-          sudo -H pip install -U pipenv
-          pip install --user pipenv
-          
           pyenv install 3.5.2
           pyenv local 3.5.2
-          pip install tox
+          pip3 install tox
       
       - name: Run integration tests
         run: tox -e integration
