--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -39,7 +39,7 @@ jobs:
           echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n eval "$(pyenv init --path)"\nfi' >> ~/.bashrc
 
-          source .bashrc
+          source ~/.bashrc
 
           pyenv install 3.5.2
           pyenv local 3.5.2
