--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/integration/sfx"]
 	path = test/integration/sfx
-	url = git@github.com:signalfx/kong-plugin-signalfx.git
+	url = https://github.com/signalfx/kong-plugin-signalfx.git
