--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -33,6 +33,10 @@ jobs:
           sudo apt update && sudo apt install -yq python3-pip
           sudo apt-get install bzip2 libedit-dev openssl
 
+          CPPFLAGS=-I$HOME/openssl/include \
+          LDFLAGS=-L$HOME/openssl/lib \
+          SSH=$HOME/openssl
+
           curl https://pyenv.run | bash
           export PATH="~/.pyenv/bin:$PATH"
           eval "$(pyenv init -)"
