--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install bzip2 libedit-dev openssl
+          sudo apt-get install bzip2 libedit-dev libssl1.0-dev
 
           CPPFLAGS=-I$HOME/openssl/include \
           LDFLAGS=-L$HOME/openssl/lib \
