--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -40,7 +40,7 @@ jobs:
 
           pyenv install 3.8.5
           pyenv local 3.8.5
-          pip install tox
+          pip3 install tox
       
       - name: Run integration tests
         run: tox -e integration
