--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -yq python3-pip
+          sudo apt update && sudo apt install -yq python-pip
           sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
           curl https://pyenv.run | bash
@@ -40,7 +40,7 @@ jobs:
 
           pyenv install 3.5.3
           pyenv local 3.5.3
-          pip3 install tox
+          pip install tox
       
       - name: Run integration tests
         run: tox -e integration
