--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -25,22 +25,34 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
 
-      # - name: Pull in kong-plugin-signalfx
-      #   run: git submodule update --init --recursive --remote
+      - name: Pull in kong-plugin-signalfx
+        run: git submodule update --init --recursive --remote
 
-      - name: Install dependencies
-        run: |
-          sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt update && sudo apt install -yq python3-pip
+      #     sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
+      #     curl https://pyenv.run | bash
+      #     export PATH="~/.pyenv/bin:$PATH"
+      #     eval "$(pyenv init -)"
+      #     eval "$(pyenv virtualenv-init -)"
 
-          pyenv install 3.5.3
-          pyenv local 3.5.3
-          pip3 install tox
+      #     pyenv install 3.5.3
+      #     pyenv local 3.5.3
+      #     pip3 install tox
+
+      - name: setup pyenv
+        id: pyenv_installation
+        uses: "gabrielfalcao/pyenv-action@v5"
+        with:
+          versions: 3.5.2
+          command: |
+            pip install -U pip setuptools
+            pip install tox
+
+      - name: Create virtualenv for python 3.5.2
+        run: pyenv local 3.5.2 && python3 -mvenv .venv352
       
       - name: Run integration tests
         run: tox -e integration
