--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   PYTHON_VERSION: 3.8.5
-  PIP_VERSION: 20.2.4
+  PIP_VERSION: 21.3.1
   REQUIREMENTS_PATH: "internal/buildscripts/packaging/tests/requirements.txt"
   RESULT_PATH: "~/testresults"
   GO_VERSION: 1.17.2
@@ -46,13 +46,15 @@ jobs:
         id: pyenv_installation
         uses: "gabrielfalcao/pyenv-action@v5"
         with:
-          default: 3.5.3
+          default: 3.8.5
           command: |
             pip install -U pip setuptools
-            pip install tox
 
-      - name: Create virtualenv for python 3.5.3
-        run: pyenv local 3.5.3 && python3 -mvenv .venv353
+      - name: Create virtualenv for python 3.8.5
+        run: pyenv local 3.8.5 && python3 -mvenv .venv385
+
+      - name: Install dependencies
+        run: pip install tox
       
       - name: Run integration tests
         run: tox -e integration
