--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           git config --list
           git submodule update --init --recursive --remote
+          git config --list
+          ls -la test/integration/sfx/
 
       - name: Install dependencies
         run: |
