--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -44,7 +44,7 @@ jobs:
 
           sudo cat ~/.bashrc
 
-          . ~/.bashrc
+          source ~/.bashrc
 
           pyenv install 3.8.10
           pyenv global 3.8.10
