--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -38,16 +38,14 @@ jobs:
           sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
           curl https://pyenv.run | bash
-          echo 'export PATH="~/.pyenv/bin:$PATH"' >> ~/.bashrc
-          echo 'eval "$(pyenv init -)"' >> ~/.bashrc
-          echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
+          export PATH="~/.pyenv/bin:$PATH"
+          eval "$(pyenv init -)"
+          eval "$(pyenv virtualenv-init -)"
 
-          sudo cat ~/.bashrc
-
-          source ~/.bashrc
+          alias python=python3
 
           pyenv install 3.8.10
-          pyenv global 3.8.10
+          pyenv local 3.8.10
           pip3 install tox
 
       # - name: setup pyenv
