--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -32,21 +32,21 @@ jobs:
           git config --list
           ls -la test/integration/sfx/
 
-      - name: Install dependencies
-        run: |
-          sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt update && sudo apt install -yq python3-pip
+      #     sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
+      #     curl https://pyenv.run | bash
+      #     export PATH="~/.pyenv/bin:$PATH"
+      #     eval "$(pyenv init -)"
+      #     eval "$(pyenv virtualenv-init -)"
 
-          alias python=python3
+      #     alias python=python3
 
-          pyenv install 3.8.10
-          pyenv local 3.8.10
-          pip3 install tox
+      #     pyenv install 3.8.10
+      #     pyenv local 3.8.10
+      #     pip3 install tox
 
       # - name: setup pyenv
       #   id: pyenv_installation
@@ -63,7 +63,7 @@ jobs:
       #   run: pip install tox
 
       - name: List files
-        run: sudo ls -la ~/
+        run: sudo ls -la ~/usr/bin/
       
-      - name: Run integration tests
-        run: tox -e integration
+      # - name: Run integration tests
+      #   run: tox -e integration
