--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -26,23 +26,23 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Pull in kong-plugin-signalfx
-        run: git submodule update --init --recursive --remote
-
-      - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+          git submodule update --init --recursive --remote
+          python --version
 
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt update && sudo apt install -yq python3-pip
+      #     sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
-          alias python=python3
+      #     curl https://pyenv.run | bash
+      #     export PATH="~/.pyenv/bin:$PATH"
+      #     eval "$(pyenv init -)"
+      #     eval "$(pyenv virtualenv-init -)"
 
-          pyenv install 3.8.10
-          pyenv local 3.8.10
-          pip3 install tox
+      #     pyenv install 3.5.3
+      #     pyenv local 3.5.3
+      #     pip3 install tox
 
       # - name: setup pyenv
       #   id: pyenv_installation
@@ -64,5 +64,5 @@ jobs:
       #     which python
       #     python --version
       
-      - name: Run integration tests
-        run: tox -e integration
+      # - name: Run integration tests
+      #   run: tox -e integration
