--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           git submodule update --init --recursive --remote
           python --version
+          pip --version
 
       # - name: Install dependencies
       #   run: |
