--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,10 +31,17 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo ln -sf python2 /usr/bin/python
-          python --version
-          pip --version
-          pip install tox
+          sudo apt update && sudo apt install -yq python3-pip
+          sudo apt-get install make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+
+          curl https://pyenv.run | bash
+          export PATH="~/.pyenv/bin:$PATH"
+          eval "$(pyenv init -)"
+          eval "$(pyenv virtualenv-init -)"
+
+          pyenv install 3.5.3
+          pyenv local 3.5.3
+          pip3 install tox
       
       - name: Run integration tests
         run: tox -e integration
