--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -45,6 +45,7 @@ jobs:
           python --version
           pip install tox
           which tox
+          export PATH="~/.pyenv/shims:$PATH"
       
-      # - name: Run integration tests
-      #   run: tox -e integration
+      - name: Run integration tests
+        run: tox -e integration
