--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -34,10 +34,13 @@ jobs:
           sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
           curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
-
+          export PATH="~/.pyenv/bin:$PATH" >> ~/.bashrc
+          eval "$(pyenv init --path)" >> ~/.bashrc
+          eval "$(pyenv virtualenv-init -)" >> ~/.bashrc
+          exec "$SHELL"
+    
+      - name: Install pyenv
+        run: |
           pyenv install 3.5.3
           pyenv local 3.5.3
           pip --version
