--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -34,16 +34,17 @@ jobs:
           sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
           curl https://pyenv.run | bash
-          exec "$SHELL"
+          export PATH="~/.pyenv/bin:$PATH"
+          eval "$(pyenv init --path)"
+          eval "$(pyenv virtualenv-init -)"
 
-      - name: Install pyenv
-        run: |
           pyenv install 3.5.3
           pyenv local 3.5.3
           pip --version
           pip3 -V
           python --version
-          pip3 install tox
+          sudo apt update
+          sudo apt install -y tox
       
       - name: Run integration tests
         run: tox -e integration
