--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -28,22 +28,31 @@ jobs:
         run: |
           git submodule update --init --recursive --remote
 
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt update && sudo apt install -yq python3-pip
+      #     sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+
+      #     curl https://pyenv.run | bash
+      #     export PATH="~/.pyenv/bin:$PATH"
+      #     eval "$(pyenv init -)"
+      #     eval "$(pyenv virtualenv-init -)"
+
+      #     pyenv install 3.5.3
+      #     pyenv global 3.5.3
+      #     pip --version
+      #     pip3 -V
+      #     python --version
+      #     pip3 install tox
+
+      - name: Install python version
+        uses: gabrielfalcao/pyenv-action@v5
+        with:
+          default: 3.5.2
+          command: pip install -U pip  # upgrade pip after installing python
+
       - name: Install dependencies
-        run: |
-          sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
-
-          curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH"
-          eval "$(pyenv init -)"
-          eval "$(pyenv virtualenv-init -)"
-
-          pyenv install 3.5.3
-          pyenv global 3.5.3
-          pip --version
-          pip3 -V
-          python --version
-          pip3 install tox
+        run: pip install tox
       
       - name: Run integration tests
         run: tox -e integration
