--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,10 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt-get install -y build-essential libssl-dev zlib1g-dev \ 
-          libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm \ 
-          libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev \ 
-          liblzma-dev python-openssl git
+          sudo apt install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
 
           curl https://pyenv.run | bash
           exec $SHELL
