--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -45,6 +45,8 @@ jobs:
           pip3 -V
           python --version
           pip3 install tox
+
+          sudo ls -la /usr/bin/
       
-      - name: Run integration tests
-        run: tox -e integration
+      # - name: Run integration tests
+      #   run: tox -e integration
